--- a/tools/changelog
+++ b/tools/changelog
@@ -1,7 +1,10 @@
 #!/bin/sh
 
 # Exports
-export Changelog=changelog.txt
+
+. $ANDROID_BUILD_TOP/vendor/raxi/tools/colors
+
+export Changelog=Changelog.txt
 
 if [ -f $Changelog ];
 then
@@ -11,22 +14,27 @@ fi
 touch $Changelog
 
 # Print something to build output
-echo "Generating changelog..."
+echo ${bldppl}"Generating changelog..."${txtrst}
 
-for i in $(seq 7); 
+for i in $(seq 5);
 do
-export After_Date=`date --date="$i days ago" +%d-%m-%Y`
+export After_Date=`date --date="$i days ago" +%m-%d-%Y`
 k=$(expr $i - 1)
-	export Until_Date=`date --date="$k days ago" +%d-%m-%Y`
-	
+	export Until_Date=`date --date="$k days ago" +%m-%d-%Y`
+
 	# Line with after --- until was too long for a small ListView
-	echo '--  ' $Until_Date  >> $Changelog
+	echo '====================' >> $Changelog;
+	echo  "     "$Until_Date       >> $Changelog;
+	echo '===================='	>> $Changelog;
 	echo >> $Changelog;
 
 	# Cycle through every repo to find commits between 2 dates
-	repo forall -pc 'git log --format="| Commit: %h | Title: %s | By: %an " --reverse --after=$After_Date --until=$Until_Date' >> $Changelog
+	repo forall -pc 'git log --oneline --after=$After_Date --until=$Until_Date' >> $Changelog
 	echo >> $Changelog;
 done
 
-# Let squisher handle the zipping part
-cp $Changelog $OUT/repack.d/ota/
+sed -i 's/project/   */g' $Changelog
+
+cp $Changelog $OUT/system/etc/
+cp $Changelog $OUT/
+rm $Changelog
